# gem_simulations

./: .gitignore  README  garfieldpp.20210814  setupgpp.sh
quadgem/: gem_part  quadgem.C  quadgem.slurm  quadgem_halfproc.slurm  quadgem_newver.slurm  quadgem_only.slurm  rdo_part  rdo_part.c  rdo_part_rect  rdo_part_rect.c
quadgem/ANSYS_geo/: ELIST_4gemf_270dv.lis  ELIST_ro_pvoltf_kap.lis  MPLIST_4gemf_375dv.lis  NLIST_4gemf_400dv.lis  NLIST_ro_chevfix2.lis  PRNSOL_4gemf_280dv.lis  PRNSOL_4gemf_290dv.lis  PRNSOL_4gemf_335dv.lis  PRNSOL_4gemf_375dv.lis  PRNSOL_4gemf_400dv.lis  PRNSOL_ro_chevfix2.lis
quadgem_singularity/: CMakeLists.txt  centm_chev_reshist.C  centm_udxy_reshist.C  centm_xy_reshist.C  centm_xy_reshist_nonauto.C  gem_iter.slurm  hist_fit_m.slurm  pion_ms.C  quadgem_nver.slurm  quadgem_only.slurm  quadgem_rota1.C  quadgem_trackheed.C  rdo_iter.C  rdo_iter.slurm  shellrunjob.sh  shellrunjob_g.sh  shellrunjob_i.sh  suh.C
quadgem_singularity/ANSYS_geo/: ELIST_quadgem_top.lis  ELIST_ro_chevf3.lis  NLIST_quadgem_top.lis  NLIST_ro_pvoltf_kap.lis  PRNSOL_4gemf_255dv.lis  PRNSOL_4gemf_270dv.lis  PRNSOL_4gemf_300dv.lis  PRNSOL_4gemf_310dv.lis  PRNSOL_4gemf_325dv.lis  PRNSOL_4gemf_v3.lis  PRNSOL_quadgem_bot.lis  PRNSOL_quadgem_top.lis  PRNSOL_rdo_xy_90deg_fix3.lis  PRNSOL_rdo_xy_90deg_fix4.lis  PRNSOL_rdo_xy_90deg_revv.lis  PRNSOL_ro_pvoltf_kap.lis
quadgem_singularity/ANSYS_geo/inputs/: quadgem_halfind_changev.inp  rdo_reduced_layer_fixk.inp
quadgem_singularity/rotational_separate/: CMakeLists.txt  quadgem.C  quadgem_only.slurm  quadgem_rota1.C  quadgem_rota2.C  quadgem_rota3.C  quadgem_rota4.C
quadgem_singularity/rotational_separate/ANSYS_geo/: ELIST_quadgem_bot.lis  NLIST_quadgem_midt.lis  PRNSOL_quadgem_midb.lis  PRNSOL_quadgem_midt.lis
